[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bft-progress-council-mcp"
version = "1.1.3"
description = "BFT Progress Council MCP — 5-voter Byzantine council halts agentic loops when no real progress is happening. Stops tokens bleeding on infinite spins. By MEOK AI Labs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nicholas Templeman", email = "nicholas@meok.ai" }]
keywords = ["mcp", "mcp-server", "model-context-protocol", "byzantine", "bft", "council", "anti-loop", "agentic", "guardrail", "meok"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Monitoring",
  "Intended Audience :: Developers",
]
dependencies = [
  "mcp[cli]>=1.3.0",
]

[project.urls]
Homepage = "https://meok.ai/a2a"
Repository = "https://github.com/CSOAI-ORG/bft-progress-council-mcp"
Issues = "https://github.com/CSOAI-ORG/bft-progress-council-mcp/issues"
Documentation = "https://meok.ai/moe"

[project.scripts]
bft-progress-council-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
